--- a/TrinhTest/Pages/Error/Error401.cshtml
+++ b/TrinhTest/Pages/Error/Error401.cshtml
@@ -15,8 +15,7 @@
                     <div class="col-lg-6 my-auto">
                         <h1 class="display-1 text-bolder text-gradient text-danger">Error 401</h1>
                         <h2>Page not found</h2>
-                        <a class="goback" onclick="ErronrGoHome()">Go Back</a>
-                        <a href="/Login/Login">Go To Homepage</a>
+                        <button type="button" class="btn bg-gradient-dark mt-4" onclick="return GoHomepage()">Go to Homepage</button>
                     </div>
                     <div class="col-lg-6 my-auto position-relative">
                         <img class="w-100 position-relative" src="/Assets/img/illustrations/error-404.png" alt="404-error">
@@ -29,26 +28,6 @@
     <footer class="footer py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 mb-4 mx-auto text-center">
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Company
-                    </a>
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        About Us
-                    </a>
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Team
-                    </a>
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Products
-                    </a>
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Blog
-                    </a>
-                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Pricing
-                    </a>
-                </div>
                 <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
                     <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
                         <span class="text-lg fab fa-dribbble"></span>
@@ -73,18 +52,20 @@
                         Copyright ©
                         <script>
                             document.write(new Date().getFullYear())
-                        </script> Soft by Creative Tim.
+                        </script> Soft by Trinh o2o.
                     </p>
                 </div>
             </div>
         </div>
     </footer>
 </body>
-$<script>
-function ErronrGoHome() {
-    let userId=localStorage.getItem("X-UserID");
-    window.history.back();
-   window.location.href="/Dash/Dash_Master"+"?CurrentID="+window.btoa(userId);
-}
-</script>
 </html>
+    <script type="text/javascript">
+    function GoHomepage(){
+        localStorage.clear();
+        var urlPath=window.location.href.replace(window.location.pathname,("/Login/Login" + "?first=1&ver=" + (new Date().getTime())));
+            window.history.pushState('urlPath','Title', urlPath);
+            window.location.reload();
+    }
+</script>
+
