--- a/TrinhTest/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Pages/Dash/Dash_Master.cshtml
@@ -19,8 +19,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
-                    <div class="card  mb-4">
+                <div class="col-sm-3 PageTransform">
+                    <div class="card mb-4">
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
@@ -40,8 +40,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="card  mb-4">
+                <div class="col-sm-3 PageTransform">
+                    <div class="card mb-4">
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
@@ -61,8 +61,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="card  mb-4">
+                <div class="col-sm-3 PageTransform">
+                    <div class="card mb-4">
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="card  mb-4">
+                <div class="col-sm-3 PageTransform">
+                    <div class="card mb-4">
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
@@ -107,9 +107,9 @@
         </div>
     </div>
     <div class="row">
-        <div id="DashPriceServices" class="col-lg-5 position-relative z-index-2">
+        <div id="DashPriceServices" class="col-lg-5 position-relative z-index-1">
         </div>
-        <div id="DashMedicineReport" class="col-lg-7 position-relative z-index-2">
+        <div id="DashMedicineReport" class="col-lg-7 position-relative z-index-1">
         </div>
     </div>
 </div>
@@ -118,6 +118,9 @@
 <script src="/Assets/js/plugins/orbit-controls.js"></script>
 <script src="/js/Common/initialize_setting.js"></script>
 <script type="text/javascript">
+    $(document).ready(function(){
+        $('.PageTransform').toggleClass('ShowPageransform');
+    })
 </script>
 <style>
     .navbar-vertical .navbar-nav .nav-link[data-bs-toggle=collapse][aria-expanded=true]:after {
