--- a/TrinhTest/Pages/Report/Medicine/MedicineReport.cshtml
+++ b/TrinhTest/Pages/Report/Medicine/MedicineReport.cshtml
@@ -5,7 +5,7 @@
 
 <script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0">
-    <div class="row">
+    <div class="row PageTransform">
         <div class="col-12">
             <div class="card">
                 <div class="card-header pb-0 p-3">
@@ -32,7 +32,7 @@
 <script type="text/javascript">
     let LstData=[];
    $(document).ready(function (){
-       
+       $('.PageTransform').toggleClass('ShowPageransform');
        LoadDataMedicineReport();
      var ctx1 = document.getElementById("medicineReport").getContext("2d");
      var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
