--- a/TrinhTest/Pages/Shared/_Layout_Login.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout_Login.cshtml
@@ -8,7 +8,7 @@
         const VDMINIFY = "true";
         const VDVERSION = "6.0";
     </script>
-    <link href='/css/site.css' rel="stylesheet" />
+    <link href='/css/site.min.css' rel="stylesheet" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
