--- a/TrinhTest/Pages/Dash/Role.cshtml
+++ b/TrinhTest/Pages/Dash/Role.cshtml
@@ -3,6 +3,8 @@
  Layout = null;
 }
 @Html.AntiForgeryToken()
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0 ">
     <div class="row">
@@ -59,6 +61,9 @@
     </div>
 </div>
 <script type="text/javascript">
+       window.onbeforeunload = function() {
+         $.get("/api/Home/KeepAlive", function (data) { });
+}
         var MasterDataMenu=[
               {
                   "Name":"Dashboards"
@@ -322,7 +327,7 @@
                   "Name":"Changelog"
                   ,"Img":""
                   ,"child":[]
-              }]
+              }];
          $(document).ready(function () {
                  if(validateAuthor("admin") !=0){
                      window.location.href = '/ErrorAuthorize'
@@ -337,8 +342,9 @@
                          $(this).addClass('bg-gradient-light');
                         RenderDetail_Tree(MasterDataMenu, "Role_TreeDetail",$(this).attr('data-id'));
                     });
-                 }
+                 };
          });
+         
            function EditMater_Render_Level_Floor(data, id) {
             $(id).empty();
             let stringcontent = "";
